🐞 fix(.npmrc,global.css,src/pages,src/component/RedPacket):fix项目配置,样式,字体等bug
修改nextui配置不正确，字体导入不正确，红包组件样式问题

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: 'din';
-  src: url('/public/font/DIN\ Alternate\ Black.ttf') format('truetype');
+  src: url('../public/font/din.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
