--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,14 +17,20 @@
 }
 
 @font-face {
-  font-family: 'din';
-  src: url('../public/font/din.ttf') format('truetype');
+  font-family: "din";
+  src: url("../public/font/din.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 body {
-  font-family: 'din', sans-serif;
+  font-family: "din", sans-serif;
+  background: rgb(47,48,56);
+  height: 100%;
+  min-width: 1000px;
+}
+html {
+  height: 100%;
 }
 
 /* body {
