--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,10 @@ html {
   min-height: 100%;
 }
 
+.pt-18{
+  padding-top:4.5rem !important;
+}
+
 /* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
