--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,7 @@
 body {
   font-family: "din", sans-serif;
   background: rgb(47,48,56);
+  min-height: 100vh;
   height: 100%;
   min-width: 1000px;
 }
